Update Dev Toolbox with new features and improved styling
- Enhanced the description in manifest.json to include new tools: JWT decode, UUID generator, epoch/date converter, and URL parser.
- Introduced CSS variables for theming and improved styling across the application for better visual consistency.
- Added a theme toggle button in the sidebar for light/dark mode.
- Implemented a new Mod Headers panel for modifying HTTP headers.
- Removed outdated tools from the sidebar and updated the tool list accordingly.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Dev Toolbox",
   "version": "1.0.0",
-  "description": "Developer toolbox: Base64 encode/decode, JSON validation and more.",
+  "description": "Developer toolbox: Base64, JWT decode, UUID, epoch/date, colors, URL parser, JSON tools and more.",
   "action": {},
   "background": {
     "service_worker": "background.js"
